--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -28,6 +28,8 @@ jobs:
           github_user_name: sumantpolai
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
+          gif_width: 800  # Adjust width to a larger value, e.g., 800px
+          gif_height: 200  # Adjust height proportionally, e.g., 200px
 
       # Commit and push the snake animation to the output branch
       - name: Commit and push the snake GIF and SVG
