--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -1,12 +1,15 @@
 # GitHub Action for generating a contribution graph with a snake eating your contributions.
-name: Snake
+
+name: Generate Snake
 
 # Controls when the action will run. This action runs every 6 hours.
+
 on:
   schedule:
-    - cron: "0 */6 * * *"  # every 6 hours
+      # every 6 hours
+    - cron: "0 */6 * * *"
 
-  # This command allows us to run the Action manually from the Actions tab.
+# This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
 
 # The sequence of runs in this workflow:
@@ -18,33 +21,33 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks out the repository under $GITHUB_WORKSPACE, so your job can access it
+
+    # Checks repo under $GITHUB_WORKSHOP, so your job can access it
       - uses: actions/checkout@v2
 
-      # Generates the snake
+    # Generates the snake  
       - uses: Platane/snk@master
         id: snake-gif
         with:
-          github_user_name: sumantpolai
+          github_user_name: mishmanners
+          # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
-          gif_width: 800  # Adjust width to a larger value, e.g., 800px
-          gif_height: 200  # Adjust height proportionally, e.g., 200px
 
-      # Commit and push the snake animation to the output branch
-      - name: Commit and push the snake GIF and SVG
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git checkout -B output
-          git add dist/github-contribution-grid-snake.gif dist/github-contribution-grid-snake.svg
-          git commit -m "Generate snake contribution grid"
-          git push -f origin output
+     # show the status of the build. Makes it easier for debugging (if there's any issues).
+      - run: git status
 
-      # Deploy the snake GIF and SVG to GitHub Pages
-      - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v2.1.3
+      # Push the changes
+      - name: Push changes
+        uses: ad-m/github-push-action@master
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: master
+          force: true
+
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
+        with:
+          # the output branch we mentioned above
           target_branch: output
           build_dir: dist
         env:
