--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -3,13 +3,12 @@
 name: Generate Snake
 
 # Controls when the action will run. This action runs every 6 hours.
-
 on:
   schedule:
-      # every 6 hours
+    # every 6 hours
     - cron: "0 */6 * * *"
 
-# This command allows us to run the Action automatically from the Actions tab.
+  # This command allows us to run the Action manually from the Actions tab.
   workflow_dispatch:
 
 # The sequence of runs in this workflow:
@@ -21,20 +20,17 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-
-    # Checks repo under $GITHUB_WORKSHOP, so your job can access it
+      # Checks out the repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-    # Generates the snake  
-      - uses: Platane/snk@master
-        id: snake-gif
+      # Generates the snake  
+      - uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: sumantpolai
-          # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
+          github_user_name: sumantpolai  # Use your GitHub username
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
-     # show the status of the build. Makes it easier for debugging (if there's any issues).
+      # Show the status of the build. Makes it easier for debugging (if there's any issues).
       - run: git status
 
       # Push the changes
@@ -45,10 +41,10 @@ jobs:
           branch: master
           force: true
 
+      # Deploy the snake GIF and SVG to GitHub Pages
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
-          # the output branch we mentioned above
-          target_branch: output
+          target_branch: output  # the output branch we mentioned above
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
