--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -1,39 +1,32 @@
-# GitHub Action for generating a contribution graph with a snake eating your contributions.
-
 name: Generate Snake
 
-# Controls when the action will run. This action runs every 6 hours.
 on:
   schedule:
-    # every 6 hours
     - cron: "0 */6 * * *"
-
-  # This command allows us to run the Action manually from the Actions tab.
   workflow_dispatch:
 
-# The sequence of runs in this workflow:
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks out the repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Generates the snake  
       - uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: sumantpolai  # Use your GitHub username
+          github_user_name: sumantpolai
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
-      # Show the status of the build. Makes it easier for debugging (if there's any issues).
-      - run: git status
+      - run: |
+          if [ -d "dist" ]; then
+            echo "Directory 'dist' exists. Listing contents:"
+            ls -la dist
+          else
+            echo "Directory 'dist' does not exist."
+          fi
+          git status
 
-      # Push the changes
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
@@ -41,10 +34,9 @@ jobs:
           branch: master
           force: true
 
-      # Deploy the snake GIF and SVG to GitHub Pages
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
-          target_branch: output  # the output branch we mentioned above
+          target_branch: output
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
