--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -10,33 +10,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
-      - uses: Platane/snk/svg-only@v3
-        with:
-          github_user_name: sumantpolai
-          gif_out_path: dist/github-contribution-grid-snake.gif
-          svg_out_path: dist/github-contribution-grid-snake.svg
+    - name: Generate Snake SVG
+      uses: Platane/snk/svg-only@v3
+      with:
+        github_user_name: sumantpolai
+        outputs: dist/github-contribution-grid-snake.svg
 
-      - run: |
-          if [ -d "dist" ]; then
-            echo "Directory 'dist' exists. Listing contents:"
-            ls -la dist
-          else
-            echo "Directory 'dist' does not exist."
-          fi
-          git status
+    # Ensure the directory exists and list the contents
+    - run: |
+        mkdir -p dist  # Ensure the dist directory exists
+        ls -la dist  # List contents of the dist directory to confirm
 
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
-          force: true
+    # Push the changes to the output branch
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: master
+        force: true
 
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Deploy to GitHub Pages
+      uses: crazy-max/ghaction-github-pages@v2.1.3
+      with:
+        target_branch: output
+        build_dir: dist
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
