--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -1,45 +1,54 @@
+# GitHub Action for generating a contribution graph with a snake eating your contributions.
+
 name: Generate Snake
+
+# Controls when the action will run. This action runs every 6 hours.
 
 on:
   schedule:
+      # every 6 hours
     - cron: "0 */6 * * *"
+
+# This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
 
+# The sequence of runs in this workflow:
 jobs:
+  # This workflow contains a single job called "build"
   build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - uses: actions/checkout@v2
 
-    - name: Generate Snake SVG
-      uses: Platane/snk/svg-only@v3
-      with:
-        github_user_name: sumantpolai
-        outputs: dist/github-contribution-grid-snake.svg
+    # Checks repo under $GITHUB_WORKSHOP, so your job can access it
+      - uses: actions/checkout@v2
 
-    - name: Generate Snake GIF
-      uses: Platane/snk/github-readme-generator@v3
-      with:
-        github_user_name: sumantpolai
-        output_file: dist/github-contribution-grid-snake.gif
+    # Generates the snake  
+      - uses: Platane/snk@master
+        id: snake-gif
+        with:
+          github_user_name: mishmanners
+          # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
+          gif_out_path: dist/github-contribution-grid-snake.gif
+          svg_out_path: dist/github-contribution-grid-snake.svg
 
-    # Ensure the directory exists and list the contents
-    - run: |
-        mkdir -p dist  # Ensure the dist directory exists
-        ls -la dist  # List contents of the dist directory to confirm
+     # show the status of the build. Makes it easier for debugging (if there's any issues).
+      - run: git status
 
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: output
-        force: true
+      # Push the changes
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: master
+          force: true
 
-    - name: Deploy to GitHub Pages
-      uses: crazy-max/ghaction-github-pages@v2.1.3
-      with:
-        target_branch: output
-        build_dir: dist
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
+        with:
+          # the output branch we mentioned above
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
